@@ -1021,7 +1021,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableParser package 2215
+# TableParser package 2291
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1106,7 +1106,7 @@ sub parse {
       my @cols;
       my @col_prefixes;
       foreach my $col_def ( split(',', $cols) ) {
-         my ($name, $prefix) = $col_def =~ m/`(\w+)`(?:\((\d+)\))?/;
+         my ($name, $prefix) = $col_def =~ m/`([^`]+)`(?:\((\d+)\))?/;
          push @cols, $name;
          push @col_prefixes, $prefix;
       }
@@ -1850,7 +1850,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableChunker package 2270
+# TableChunker package 2289
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1887,40 +1887,45 @@ sub find_chunk_columns {
          . join(', ', @{$opts->{possible_keys}}));
    }
 
-   my @candidate_cols;
+   my @possible_keys;
+   KEY:
+   foreach my $key ( values %{ $table->{keys} } ) {
 
-   my @possible_keys = grep { $_->{type} eq 'BTREE' } values %{$table->{keys}};
+      next unless $key->{type} eq 'BTREE';
+
+      defined $_ && next KEY for @{ $key->{col_prefixes} };
+
+      if ( $opts->{exact} ) {
+         next unless $key->{unique} && @{$key->{cols}} == 1;
+      }
+
+      push @possible_keys, $key;
+   }
+
    @possible_keys = sort {
       ($prefer{$a->{name}} || 9999) <=> ($prefer{$b->{name}} || 9999)
    } @possible_keys;
+
    MKDEBUG && _d('Possible keys in order: '
       . join(', ', map { $_->{name} } @possible_keys));
 
    my $can_chunk_exact = 0;
-   if ($opts->{exact}) {
-      @candidate_cols =
-         grep {
-            $int_types{$table->{type_for}->{$_}}
-            || $real_types{$table->{type_for}->{$_}}
-         }
-         map  { $_->{cols}->[0] }
-         grep { $_->{unique} && @{$_->{cols}} == 1 }
-              @possible_keys;
-      if ( @candidate_cols ) {
-         $can_chunk_exact = 1;
-      }
-      MKDEBUG && _d('Exact chunkable: ' . join(', ', @candidate_cols));
+   my @candidate_cols;
+   foreach my $key ( @possible_keys ) { 
+      my $col = $key->{cols}->[0];
+
+      next unless ( $int_types{$table->{type_for}->{$col}}
+                    || $real_types{$table->{type_for}->{$col}} );
+
+      push @candidate_cols, { column => $col, index => $key->{name} };
    }
 
-   if ( !@candidate_cols ) {
-      @candidate_cols =
-         grep {
-            $int_types{$table->{type_for}->{$_}}
-            || $real_types{$table->{type_for}->{$_}}
-         }
-         map { $_->{cols}->[0] }
-         @possible_keys;
-      MKDEBUG && _d('Inexact chunkable: ' . join(', ', @candidate_cols));
+   $can_chunk_exact = 1 if ( $opts->{exact} && scalar @candidate_cols );
+
+   if ( MKDEBUG ) {
+      my $chunk_type = $opts->{exact} ? 'Exact' : 'Inexact';
+      _d("$chunk_type chunkable: "
+         . join(', ', map { "$_->{column} on $_->{index}" } @candidate_cols));
    }
 
    my @result;
@@ -1928,18 +1933,23 @@ sub find_chunk_columns {
       MKDEBUG && _d('Ordering columns by order in tbl, PK first');
       if ( $table->{keys}->{PRIMARY} ) {
          my $pk_first_col = $table->{keys}->{PRIMARY}->{cols}->[0];
-         @result = grep { $_ eq $pk_first_col } @candidate_cols;
-         @candidate_cols = grep { $_ ne $pk_first_col } @candidate_cols;
+         @result = grep { $_->{column} eq $pk_first_col } @candidate_cols;
+         @candidate_cols = grep { $_->{column} ne $pk_first_col } @candidate_cols;
       }
       my $i = 0;
       my %col_pos = map { $_ => $i++ } @{$table->{cols}};
-      push @result, sort { $col_pos{$a} <=> $col_pos{$b} } @candidate_cols;
+      push @result, sort { $col_pos{$a->{column}} <=> $col_pos{$b->{column}} }
+                       @candidate_cols;
    }
    else {
       @result = @candidate_cols;
    }
-   MKDEBUG && _d('Chunkable columns: ' . join(', ', @result));
-   MKDEBUG && _d("Can chunk exactly: $can_chunk_exact");
+
+   if ( MKDEBUG ) {
+      _d('Chunkable columns: '
+         . join(', ', map { "$_->{column} on $_->{index}" } @result));
+      _d("Can chunk exactly: $can_chunk_exact");
+   }
 
    return ($can_chunk_exact, \@result);
 }
@@ -2050,7 +2060,7 @@ sub calculate_chunks {
 sub get_first_chunkable_column {
    my ( $self, $table, $opts ) = @_;
    my ($exact, $cols) = $self->find_chunk_columns($table, $opts);
-   return $cols->[0];
+   return ( $cols->[0]->{column}, $cols->[0]->{index} );
 }
 
 sub size_to_rows {
@@ -2115,9 +2125,13 @@ sub inject_chunks {
          . join(" AND ", map { "($_)" } grep { $_ } @{$args{where}} )
          . ")";
    }
+   my $db_tbl     = $self->{quoter}->quote(@args{qw(database table)});
+   my $index_hint = defined $args{index_hint}
+                    ? "USE INDEX (`$args{index_hint}`)"
+                    : '';
    $args{query} =~ s!/\*WHERE\*/! $where!;
-   my $db_tbl = $self->{quoter}->quote(@args{qw(database table)});
    $args{query} =~ s!/\*DB_TBL\*/!$db_tbl!;
+   $args{query} =~ s!/\*INDEX_HINT\*/! $index_hint!;
    $args{query} =~ s!/\*CHUNK_NUM\*/! $args{chunk_num} AS chunk_num,!;
    return $args{query};
 }
@@ -2199,7 +2213,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableChecksum package 2259
+# TableChecksum package 2283
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -2504,7 +2518,7 @@ sub make_checksum_query {
          . ($args{buffer} ? 'SQL_BUFFER_RESULT ' : '')
          . "/*PROGRESS_COMMENT*//*CHUNK_NUM*/ COUNT(*) AS cnt, $result";
    }
-   return $result . "FROM /*DB_TBL*//*WHERE*/";
+   return $result . "FROM /*DB_TBL*//*INDEX_HINT*//*WHERE*/";
 }
 
 sub find_replication_differences {
@@ -2539,7 +2553,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableSyncChunk package 2215
+# TableSyncChunk package 2292
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -2569,8 +2583,9 @@ sub new {
    MKDEBUG && _d('CRC column will be named ' . $args{crc_col});
 
    my @chunks;
-   my $col = $args{chunker}->get_first_chunkable_column(
+   my ( $col, $idx ) = $args{chunker}->get_first_chunkable_column(
       $args{struct}, { possible_keys => $args{possible_keys} });
+   $args{index} = $idx;
    if ( $col ) {
       my %params = $args{chunker}->get_range_statistics(
          $args{dbh}, $args{database}, $args{table}, $col,
@@ -2643,23 +2658,28 @@ sub new {
 sub get_sql {
    my ( $self, %args ) = @_;
    if ( $self->{state} ) {
+      my $index_hint = defined $args{index_hint}
+                       ? " USE INDEX (`$args{index_hint}`) "
+                       : '';
       return 'SELECT '
          . ($self->{bufferinmysql} ? 'SQL_BUFFER_RESULT ' : '')
          . join(', ', map { $self->{quoter}->quote($_) } @{$self->key_cols()})
          . ', ' . $self->{row_sql} . " AS $self->{crc_col}"
          . ' FROM ' . $self->{quoter}->quote(@args{qw(database table)})
+         . $index_hint 
          . ' WHERE (' . $self->{chunks}->[$self->{chunk_num}] . ')'
          . ($args{where} ? " AND ($args{where})" : '');
    }
    else {
       return $self->{chunker}->inject_chunks(
-         database  => $args{database},
-         table     => $args{table},
-         chunks    => $self->{chunks},
-         chunk_num => $self->{chunk_num},
-         query     => $self->{chunk_sql},
-         where     => [$args{where}],
-         quoter    => $self->{quoter},
+         database   => $args{database},
+         table      => $args{table},
+         chunks     => $self->{chunks},
+         chunk_num  => $self->{chunk_num},
+         query      => $self->{chunk_sql},
+         where      => [$args{where}],
+         quoter     => $self->{quoter},
+         index_hint => $args{index_hint},
       );
    }
 }
@@ -3295,16 +3315,18 @@ sub sync_table {
 
       MKDEBUG && _d("Beginning sync cycle $cycle");
       my $src_sql = $plugin->get_sql(
-         quoter   => $args{quoter},
-         database => $args{src_db},
-         table    => $args{src_tbl},
-         where    => $args{where},
+         quoter     => $args{quoter},
+         database   => $args{src_db},
+         table      => $args{src_tbl},
+         where      => $args{where},
+         index_hint => $args{index_hint} ? $plugin->{index} : undef,
       );
       my $dst_sql = $plugin->get_sql(
-         quoter   => $args{quoter},
-         database => $args{dst_db},
-         table    => $args{dst_tbl},
-         where    => $args{where},
+         quoter     => $args{quoter},
+         database   => $args{dst_db},
+         table      => $args{dst_tbl},
+         where      => $args{where},
+         index_hint => $args{index_hint} ? $plugin->{index} : undef,
       );
       if ( $args{transaction} ) {
          if ( $change_dbh && $change_dbh eq $args{src_dbh} ) {
@@ -4633,11 +4655,12 @@ if ( $dsns[0]->{t} ) {
       lock_server(%args);
       sync_a_table(
          %args,
-         src_db  => $dsns[0]->{D},
-         src_tbl => $dsns[0]->{t},
-         dst_db  => $dsn->{D},
-         dst_tbl => $dsn->{t},
-         where   => $opts{W},
+         src_db     => $dsns[0]->{D},
+         src_tbl    => $dsns[0]->{t},
+         dst_db     => $dsn->{D},
+         dst_tbl    => $dsn->{t},
+         where      => $opts{W},
+         index_hint => !$opts{'no-use-index'},
       );
       unlock_server(%args);
    }
@@ -4693,11 +4716,12 @@ elsif ( $opts{R} ) {
          foreach my $diff ( @diffs ) {
             sync_a_table(
                %args,
-               src_db  => $diff->{db},
-               src_tbl => $diff->{tbl},
-               dst_db  => $diff->{db},
-               dst_tbl => $diff->{tbl},
-               where   => $diff->{boundaries},
+               src_db     => $diff->{db},
+               src_tbl    => $diff->{tbl},
+               dst_db     => $diff->{db},
+               dst_tbl    => $diff->{tbl},
+               where      => $diff->{boundaries},
+               index_hint => !$opts{'no-use-index'},
             );
          }
          unlock_server(%args);
@@ -4749,11 +4773,12 @@ elsif ( $opts{R} ) {
                   foreach my $diff ( @diffs ) {
                      sync_a_table(
                         %args,
-                        src_db  => $diff->{db},
-                        src_tbl => $diff->{tbl},
-                        dst_db  => $diff->{db},
-                        dst_tbl => $diff->{tbl},
-                        where => $diff->{boundaries},
+                        src_db     => $diff->{db},
+                        src_tbl    => $diff->{tbl},
+                        dst_db     => $diff->{db},
+                        dst_tbl    => $diff->{tbl},
+                        where      => $diff->{boundaries},
+                        index_hint => !$opts{'no-use-index'},
                      );
                   }
                   unlock_server(%args);
@@ -4830,11 +4855,12 @@ else {
       foreach my $db_tbl ( @dbs_tbls ) {
          sync_a_table(
             %args,
-            src_db  => $db_tbl->{db},
-            src_tbl => $db_tbl->{tbl},
-            dst_db  => $db_tbl->{db},
-            dst_tbl => $db_tbl->{tbl},
-            where   => $opts{W},
+            src_db     => $db_tbl->{db},
+            src_tbl    => $db_tbl->{tbl},
+            dst_db     => $db_tbl->{db},
+            dst_tbl    => $db_tbl->{tbl},
+            where      => $opts{W},
+            index_hint => !$opts{'no-use-index'},
          );
       }
       unlock_server(%args);
@@ -4913,6 +4939,7 @@ sub sync_a_table {
          dst_tbl       => $args{dst_tbl},
          dumper        => $du,
          execute       => $opts{x} || 0,
+         index_hint    => $args{index_hint},
          lock          => $opts{k} || 0,
          misc_dbh      => $args{src}->{misc_dbh},
          nibbler       => $nibbler,
@@ -5044,7 +5071,7 @@ sub check_tables_for_triggers {
                $dbh->disconnect();
                die "Cannot write to table with triggers: "
                   . "$db_tbl->{db}\.$db_tbl->{tbl}\n"
-                  . "Use --ignore-triggers to force writting.\n";
+                  . "Use --ignore-triggers to force writing.\n";
             }
          }
          else {
@@ -5416,6 +5443,18 @@ for the slave to catch up to the master before continuing.
 If L<"--transaction"> is specified, C<LOCK TABLES> is not used.  Instead, lock
 and unlock are implemented by beginning and committing transactions.  The exception
 is if L<"--lock"> is 3.
+
+=item --no-use-index
+
+Do not add USE INDEX hint to SQL statements for Chunk algorithm.
+
+By default C<mk-table-sync> adds an USE INDEX hint to each SQL statement
+for the Chunk algorithm to coerce MySQL into using the index for the column
+by which a table will be chunked. This option causes C<mk-table-sync> to
+omit the USE INDEX hint.
+
+The Nibble algorithm always uses a FORCE/USE INDEX hint. The GroupBy and Stream
+algorithms never use an index hint.
 
 =item --print
 
