@@ -1,5 +1,6 @@
 Changelog for mk-table-sync:
 
+   * Added --no-use-index option (issue 8).
    * Dies if any dst. table has triggers unless --ignore-triggers (issue 37).
    * Added better support for CRC32 (issue 43).
 
